exports[`<View /> empty with children 1`] = `
<div
  className="rp_View"
  style={null}>
  <div
    className="rp_View"
    style={null} />
</div>
`;

exports[`<View /> empty with no children 1`] = `
<div
  className="rp_View"
  style={null} />
`;

exports[`<View /> with a11y props 1`] = `
<div
  aria-hidden={false}
  aria-label="Label"
  aria-live={undefined}
  className="rp_View"
  role={undefined}
  style={
    Object {
      "height": "20px",
      "width": "20px",
    }
  }>
  Hello World!
</div>
`;

exports[`<View /> with a11y role 1`] = `
<button
  aria-hidden={false}
  aria-label={undefined}
  aria-live={undefined}
  className="rp_View"
  role="button"
  style={
    Object {
      "height": "20px",
      "width": "20px",
    }
  }>
  Hello World!
</button>
`;

exports[`<View /> with multiple styles and some inline 1`] = `
<div
  className="rp_View r1e1kp2h r1khqts81 "
  style={
    Object {
      "opacity": 0.5,
    }
  } />
`;

exports[`<View /> with single inline style 1`] = `
<div
  className="rp_View"
  style={
    Object {
      "height": "20px",
      "width": "20px",
    }
  }>
  Hello World!
</div>
`;

exports[`<View /> with single registered style 1`] = `
<div
  className="rp_View r1e1kp2h"
  style={null} />
`;
